fixed 1133px layout issue

--- a/src/components/components-posts/community-post-detail-pop-up/community-post-detail-pop-up.styles.scss
+++ b/src/components/components-posts/community-post-detail-pop-up/community-post-detail-pop-up.styles.scss
@@ -304,131 +304,6 @@
   background-color: #e2e3e7;
 }
 
-@media (max-width: 1133px) {
-}
-
-@media (max-width: 1024px) {
-  .post-detail-popUp-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    background-color: #ffffff;
-    border-radius: 20px;
-  }
-
-  .post-detail-mobile-profile-container {
-    display: flex;
-    align-items: center;
-    padding: 10px;
-    height: 60px;
-
-    .post-detail-mobile-profile {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      gap: 10px;
-    }
-
-    .post-detail-mobile-avatar {
-      width: 35.84px;
-      height: 35.84px;
-      border-radius: 50%;
-      object-fit: cover;
-    }
-  }
-  .doctor-search-button {
-    font-family: 'Open Sans';
-    font-style: normal;
-    font-weight: 600;
-    color: #ffffff;
-    width: 150px;
-    margin-left: 5px;
-    justify-content: center;
-    align-items: center;
-    background: #352c29;
-    border-radius: 20px;
-    display: flex;
-    height: 40px;
-    font-size: 15px;
-    // margin-top: 10px;
-  }
-
-  .postdetail-popUp-left-container {
-    display: flex;
-    justify-content: center;
-  }
-
-  .post-popUp-content {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    gap: 20px;
-    margin-bottom: 20px;
-  }
-
-  .postdetail-popUp-right-container {
-    display: block;
-    background-color: #ffffff;
-    padding: 20px 30px;
-  }
-
-  .detail-top-content {
-    display: block;
-  }
-
-  .post-popUp-break-lines {
-    display: none;
-  }
-
-  .post-popUp-comments {
-    border-top: 1px solid rgba(226, 227, 231, 1);
-  }
-
-  .post-detail-mobile-download-button {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    gap: 10px;
-    margin-bottom: 50px;
-    border-top: 1px solid rgba(226, 227, 231, 1);
-
-    .join-community-text {
-      font-size: 14px;
-      font-weight: 500px;
-      line-height: 25.6px;
-      font-family: 'Open Sans';
-    }
-  }
-
-  // .fixed-input-box {
-  //   display: none;
-
-  //   .Icon-display {
-  //     display: none;
-
-  //     .Icon-size {
-  //       display: none;
-  //     }
-
-  //     .Icon-count {
-  //       display: none;
-  //     }
-  //   }
-
-  //   .new-comment-input {
-  //     .input-blank {
-  //       display: none;
-  //     }
-
-  //     .input-blank.focus {
-  //       display: none;
-  //     }
-  //   }
-  // }
-}
-
 .user-detail {
   position: absolute;
   bottom: 0;
@@ -527,7 +402,104 @@
   border-radius: 10px;
 }
 
+@media (max-width: 1133px) {
+}
+
 @media (max-width: 744px) {
+  .post-detail-popUp-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    background-color: #ffffff;
+    border-radius: 20px;
+  }
+
+  .post-detail-mobile-profile-container {
+    display: flex;
+    align-items: center;
+    padding: 10px;
+    height: 60px;
+
+    .post-detail-mobile-profile {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 10px;
+    }
+
+    .post-detail-mobile-avatar {
+      width: 35.84px;
+      height: 35.84px;
+      border-radius: 50%;
+      object-fit: cover;
+    }
+  }
+  .doctor-search-button {
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 600;
+    color: #ffffff;
+    width: 150px;
+    margin-left: 5px;
+    justify-content: center;
+    align-items: center;
+    background: #352c29;
+    border-radius: 20px;
+    display: flex;
+    height: 40px;
+    font-size: 15px;
+    // margin-top: 10px;
+  }
+
+  .postdetail-popUp-left-container {
+    display: flex;
+    justify-content: center;
+  }
+
+  .post-popUp-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    gap: 20px;
+    margin-bottom: 20px;
+  }
+
+  .postdetail-popUp-right-container {
+    display: block;
+    background-color: #ffffff;
+    padding: 20px 30px;
+  }
+
+  .detail-top-content {
+    display: block;
+  }
+
+  .post-popUp-break-lines {
+    display: none;
+  }
+
+  .post-popUp-comments {
+    border-top: 1px solid rgba(226, 227, 231, 1);
+  }
+
+  .post-detail-mobile-download-button {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    gap: 10px;
+    margin-bottom: 50px;
+    border-top: 1px solid rgba(226, 227, 231, 1);
+
+    .join-community-text {
+      font-size: 14px;
+      font-weight: 500px;
+      line-height: 25.6px;
+      font-family: 'Open Sans';
+    }
+  }
+
   .post-detail-popUp-container {
     .postdetail-popUp-left-container {
       border-radius: 0;
@@ -565,4 +537,30 @@
   .fixed-input-box {
     left: 0;
   }
+
+  // .fixed-input-box {
+  //   display: none;
+
+  //   .Icon-display {
+  //     display: none;
+
+  //     .Icon-size {
+  //       display: none;
+  //     }
+
+  //     .Icon-count {
+  //       display: none;
+  //     }
+  //   }
+
+  //   .new-comment-input {
+  //     .input-blank {
+  //       display: none;
+  //     }
+
+  //     .input-blank.focus {
+  //       display: none;
+  //     }
+  //   }
+  // }
 }
